\set ON_ERROR_STOP on

CREATE TABLE IF NOT EXISTS mosaic.brand (
    brand_id        bigint GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    brand_key       text NOT NULL UNIQUE,
    display_name    text NOT NULL,
    is_synthetic    boolean NOT NULL DEFAULT true,
    metadata        jsonb NOT NULL DEFAULT '{}'::jsonb,
    created_at      timestamptz NOT NULL DEFAULT now(),
    updated_at      timestamptz NOT NULL DEFAULT now()
);

CREATE TABLE IF NOT EXISTS mosaic.category (
    category_id          bigint GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    domain               mosaic.product_domain NOT NULL,
    parent_category_id   bigint REFERENCES mosaic.category(category_id),
    category_key         text NOT NULL UNIQUE,
    display_name         text NOT NULL,
    category_path        text NOT NULL,
    depth                smallint NOT NULL CHECK (depth BETWEEN 0 AND 8),
    metadata             jsonb NOT NULL DEFAULT '{}'::jsonb,
    created_at           timestamptz NOT NULL DEFAULT now(),
    updated_at           timestamptz NOT NULL DEFAULT now()
);

CREATE TABLE IF NOT EXISTS mosaic.attribute_definition (
    attribute_key       text PRIMARY KEY,
    category_id         bigint REFERENCES mosaic.category(category_id),
    display_name        text NOT NULL,
    value_type          text NOT NULL CHECK (value_type IN ('text','number','boolean','enum','text_array','number_array')),
    unit                text,
    is_filterable       boolean NOT NULL DEFAULT false,
    is_facetable        boolean NOT NULL DEFAULT false,
    include_in_embedding boolean NOT NULL DEFAULT true,
    include_in_rerank    boolean NOT NULL DEFAULT true,
    enum_values         jsonb,
    display_order       integer NOT NULL DEFAULT 0,
    metadata            jsonb NOT NULL DEFAULT '{}'::jsonb
);

CREATE TABLE IF NOT EXISTS mosaic.embedding_model (
    model_key          text PRIMARY KEY,
    provider           text NOT NULL,
    model_name         text NOT NULL,
    dimensions         integer NOT NULL CHECK (dimensions > 0),
    distance_metric    text NOT NULL DEFAULT 'cosine' CHECK (distance_metric IN ('cosine','l2','inner_product')),
    is_active          boolean NOT NULL DEFAULT false,
    metadata           jsonb NOT NULL DEFAULT '{}'::jsonb,
    created_at         timestamptz NOT NULL DEFAULT now()
);

CREATE UNIQUE INDEX IF NOT EXISTS embedding_model_one_active_idx
    ON mosaic.embedding_model ((is_active))
    WHERE is_active;

DROP TRIGGER IF EXISTS brand_set_updated_at ON mosaic.brand;
CREATE TRIGGER brand_set_updated_at
BEFORE UPDATE ON mosaic.brand
FOR EACH ROW EXECUTE FUNCTION mosaic.set_updated_at();

DROP TRIGGER IF EXISTS category_set_updated_at ON mosaic.category;
CREATE TRIGGER category_set_updated_at
BEFORE UPDATE ON mosaic.category
FOR EACH ROW EXECUTE FUNCTION mosaic.set_updated_at();
