\set ON_ERROR_STOP on

CREATE TABLE IF NOT EXISTS mosaic.product (
    product_id             bigint GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    product_uid            uuid NOT NULL DEFAULT gen_random_uuid() UNIQUE,
    sku                    text NOT NULL UNIQUE,
    brand_id               bigint NOT NULL REFERENCES mosaic.brand(brand_id),
    category_id            bigint NOT NULL REFERENCES mosaic.category(category_id),
    canonical_group_id     text NOT NULL,
    model_name             text NOT NULL,
    title                  text NOT NULL,
    short_description      text NOT NULL,
    long_description       text NOT NULL,
    language               text NOT NULL DEFAULT 'en-US',
    attributes             jsonb NOT NULL DEFAULT '{}'::jsonb,
    tags                   text[] NOT NULL DEFAULT ARRAY[]::text[],
    aliases                text[] NOT NULL DEFAULT ARRAY[]::text[],
    challenge_cohorts      text[] NOT NULL DEFAULT ARRAY[]::text[],
    launch_date            date,
    source_system          text NOT NULL,
    content_hash           text,
    is_active              boolean NOT NULL DEFAULT true,
    created_at             timestamptz NOT NULL DEFAULT now(),
    updated_at             timestamptz NOT NULL DEFAULT now(),
    CONSTRAINT product_attributes_object CHECK (jsonb_typeof(attributes) = 'object')
);

CREATE TABLE IF NOT EXISTS mosaic.product_offer (
    product_id              bigint PRIMARY KEY REFERENCES mosaic.product(product_id) ON DELETE CASCADE,
    price_cents             bigint NOT NULL CHECK (price_cents >= 0),
    list_price_cents        bigint NOT NULL CHECK (list_price_cents >= price_cents),
    currency                char(3) NOT NULL DEFAULT 'USD',
    availability            mosaic.availability_status NOT NULL,
    inventory_count         integer NOT NULL DEFAULT 0 CHECK (inventory_count >= 0),
    seller_count            smallint NOT NULL DEFAULT 1 CHECK (seller_count >= 0),
    shipping_days           smallint CHECK (shipping_days >= 0),
    warranty_months         smallint CHECK (warranty_months >= 0),
    rating                  numeric(3,2) CHECK (rating BETWEEN 0 AND 5),
    review_count            integer NOT NULL DEFAULT 0 CHECK (review_count >= 0),
    return_rate             real CHECK (return_rate BETWEEN 0 AND 1),
    popularity_score        real NOT NULL DEFAULT 0 CHECK (popularity_score BETWEEN 0 AND 1),
    quality_score           real NOT NULL DEFAULT 0 CHECK (quality_score BETWEEN 0 AND 1),
    freshness_score         real NOT NULL DEFAULT 0 CHECK (freshness_score BETWEEN 0 AND 1),
    metadata_completeness   real NOT NULL DEFAULT 1 CHECK (metadata_completeness BETWEEN 0 AND 1),
    is_refurbished          boolean NOT NULL DEFAULT false,
    is_sponsored            boolean NOT NULL DEFAULT false,
    offer_metadata          jsonb NOT NULL DEFAULT '{}'::jsonb,
    effective_at            timestamptz NOT NULL DEFAULT now(),
    updated_at              timestamptz NOT NULL DEFAULT now()
);

CREATE TABLE IF NOT EXISTS mosaic.merchandising_assignment (
    product_id             bigint PRIMARY KEY REFERENCES mosaic.product(product_id) ON DELETE CASCADE,
    media_tier             mosaic.media_tier NOT NULL,
    merchandising_title    text,
    shop_page              smallint CHECK (shop_page BETWEEN 1 AND 1000),
    shop_position          smallint CHECK (shop_position BETWEEN 1 AND 100),
    is_flagship            boolean NOT NULL DEFAULT false,
    is_retrieval_anchor    boolean NOT NULL DEFAULT false,
    catalog_asset_key      text,
    detail_asset_key       text,
    live_demo_queries      text[] NOT NULL DEFAULT ARRAY[]::text[],
    metadata               jsonb NOT NULL DEFAULT '{}'::jsonb,
    valid_from             timestamptz NOT NULL DEFAULT now(),
    valid_to               timestamptz,
    created_at             timestamptz NOT NULL DEFAULT now(),
    updated_at             timestamptz NOT NULL DEFAULT now(),
    CONSTRAINT merchandising_page_position_unique UNIQUE (shop_page, shop_position),
    CONSTRAINT merchandising_valid_window CHECK (valid_to IS NULL OR valid_to > valid_from),
    CONSTRAINT flagship_requires_flagship_tier CHECK (NOT is_flagship OR media_tier = 'flagship')
);

CREATE INDEX IF NOT EXISTS product_brand_category_idx
    ON mosaic.product (brand_id, category_id);
CREATE INDEX IF NOT EXISTS product_canonical_group_idx
    ON mosaic.product (canonical_group_id);
CREATE INDEX IF NOT EXISTS product_active_updated_idx
    ON mosaic.product (is_active, updated_at DESC);
CREATE INDEX IF NOT EXISTS product_attributes_gin_idx
    ON mosaic.product USING gin (attributes jsonb_path_ops);
CREATE INDEX IF NOT EXISTS product_tags_gin_idx
    ON mosaic.product USING gin (tags);
CREATE INDEX IF NOT EXISTS product_aliases_gin_idx
    ON mosaic.product USING gin (aliases);
CREATE INDEX IF NOT EXISTS product_challenge_cohorts_gin_idx
    ON mosaic.product USING gin (challenge_cohorts);

CREATE INDEX IF NOT EXISTS product_offer_availability_price_idx
    ON mosaic.product_offer (availability, price_cents);
CREATE INDEX IF NOT EXISTS product_offer_rating_idx
    ON mosaic.product_offer (rating DESC, review_count DESC);
CREATE INDEX IF NOT EXISTS product_offer_updated_idx
    ON mosaic.product_offer (updated_at DESC);

CREATE INDEX IF NOT EXISTS merchandising_shop_idx
    ON mosaic.merchandising_assignment (shop_page, shop_position)
    WHERE shop_page IS NOT NULL;
CREATE INDEX IF NOT EXISTS merchandising_anchor_idx
    ON mosaic.merchandising_assignment (is_retrieval_anchor, media_tier)
    WHERE is_retrieval_anchor;

DROP TRIGGER IF EXISTS product_set_updated_at ON mosaic.product;
CREATE TRIGGER product_set_updated_at
BEFORE UPDATE ON mosaic.product
FOR EACH ROW EXECUTE FUNCTION mosaic.set_updated_at();

DROP TRIGGER IF EXISTS product_offer_set_updated_at ON mosaic.product_offer;
CREATE TRIGGER product_offer_set_updated_at
BEFORE UPDATE ON mosaic.product_offer
FOR EACH ROW EXECUTE FUNCTION mosaic.set_updated_at();

DROP TRIGGER IF EXISTS merchandising_set_updated_at ON mosaic.merchandising_assignment;
CREATE TRIGGER merchandising_set_updated_at
BEFORE UPDATE ON mosaic.merchandising_assignment
FOR EACH ROW EXECUTE FUNCTION mosaic.set_updated_at();
