\set ON_ERROR_STOP on

CREATE TABLE IF NOT EXISTS mosaic.product_evidence (
    evidence_id          bigint GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    evidence_uid         uuid NOT NULL DEFAULT gen_random_uuid() UNIQUE,
    product_id           bigint NOT NULL REFERENCES mosaic.product(product_id) ON DELETE CASCADE,
    evidence_type        mosaic.evidence_type NOT NULL,
    source_name          text NOT NULL,
    source_reference     text,
    evidence_title       text,
    evidence_text        text NOT NULL,
    source_date          date,
    rating               numeric(3,2) CHECK (rating BETWEEN 0 AND 5),
    is_verified          boolean NOT NULL DEFAULT false,
    metadata             jsonb NOT NULL DEFAULT '{}'::jsonb,
    trigram_text         text NOT NULL DEFAULT '',
    evidence_document    tsvector GENERATED ALWAYS AS (
        setweight(to_tsvector('english', coalesce(evidence_title, '')), 'A') ||
        setweight(to_tsvector('english', coalesce(evidence_text, '')), 'B') ||
        setweight(to_tsvector('english', coalesce(source_name, '')), 'C')
    ) STORED,
    embedding_text       text NOT NULL,
    embedding            vector(1024),
    embedding_model_key  text REFERENCES mosaic.embedding_model(model_key),
    created_at           timestamptz NOT NULL DEFAULT now(),
    updated_at           timestamptz NOT NULL DEFAULT now()
);

CREATE INDEX IF NOT EXISTS evidence_product_type_idx
    ON mosaic.product_evidence (product_id, evidence_type);
CREATE INDEX IF NOT EXISTS evidence_document_gin_idx
    ON mosaic.product_evidence USING gin (evidence_document);
CREATE INDEX IF NOT EXISTS evidence_trigram_gin_idx
    ON mosaic.product_evidence USING gin (trigram_text gin_trgm_ops);
CREATE INDEX IF NOT EXISTS evidence_metadata_gin_idx
    ON mosaic.product_evidence USING gin (metadata jsonb_path_ops);

DROP TRIGGER IF EXISTS product_evidence_set_updated_at ON mosaic.product_evidence;
CREATE TRIGGER product_evidence_set_updated_at
BEFORE UPDATE ON mosaic.product_evidence
FOR EACH ROW EXECUTE FUNCTION mosaic.set_updated_at();
